--- a/app/globals.css
+++ b/app/globals.css
@@ -19,12 +19,13 @@
 body {
   overflow-x: hidden;
   background: var(--background);
-  color: var(--foreground);
+  color: #0a0a0a,#0d2c3b;
   font-family: var(--font-sans), Arial, Helvetica, sans-serif,Mesard ,Nunito;
 }
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 @keyframes fade-in {
